# statics

./: .drone.yml  Cargo.toml  Dockerfile  Jenkinsfile  README.md
config/: base.toml  development.toml  k8s.toml
docker/: Dockerfile.run  Dockerfile.statics  docker-compose.yml  statics-pg_values.yaml
docker/k8s/: 20-svc-statics.yml  30-deploy-statics.yml
src/: config.rs  errors.rs  lib.rs  log.rs  main.rs  utils.rs
src/controller/: mod.rs  multipart_utils.rs  routes.rs  utils.rs
src/services/: error.rs  mod.rs  system.rs  types.rs
src/services/s3/: client.rs  credentials.rs  error.rs  mod.rs  random.rs  types.rs
src/services/s3/preprocessors/: mod.rs
tests/: healthcheck_test.rs  images_test.rs
tests/common/: mod.rs
tests/static_files/: upload.html
tests/testcases/: images_test.rs  main.rs
