[package]
name = "statics"
version = "0.1.0"
authors = ["karasev.alexey@gmail.com"]

[lib]
name = "statics_lib"
path = "src/lib.rs"

[dependencies]
config = "0.7"
log = "0.3.8"
env_logger = "0.4.3"
hyper = "0.11.9"
futures = "0.1.17"
tokio-core = "0.1"
futures-cpupool = "0.1.7"
serde = "1.0"
serde_derive = "1.0"
jsonwebtoken = "4.0.0"
hyper-tls="0.1.2"
failure = "0.1.1"
rusoto_core = "0.32.0"
rusoto_s3 = "0.32.0"
multipart = { version = "0.14.2", default-features = false, features = ["server"] }
mime = "0.3.5"
rand = "0.4.2"
base64 = "0.9.0"
stq_http = { path = "vendor/libstqbackend/http" }
stq_router = { path = "vendor/libstqbackend/router" }
