[package]
name = "statics"
version = "0.1.0"
authors = ["karasev.alexey@gmail.com"]

[lib]
name = "statics_lib"
path = "src/lib.rs"

[dependencies]
config = "0.7"
env_logger = "0.5"
hyper = "0.11.9"
failure = "0.1.1"
futures = "0.1.19"
futures-cpupool = "0.1.7"
futures-timer = "*"
hyper-tls="0.1.2"
jsonwebtoken = "4.0.0"
log = "0.4"
maplit = "*"
rusoto_core = "0.32.0"
rusoto_s3 = "0.32.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
multipart = { version = "0.14.2", default-features = false, features = ["server"] }
mime = "0.3.5"
rand = "0.4.2"
chrono = "0.4.0"
image = { version = "0.18.0", default-features = false, features = ["jpeg", "png_codec"] }
base64 = "0.9.0"
stq_http = { path = "vendor/libstqbackend/http" }
stq_router = { path = "vendor/libstqbackend/router" }

[dev-dependencies]
multipart = { version = "0.14.2", default-features = false, features = ["client", "hyper"] }
serde_json = "1.0"
hyper-tls = "0.1.3"
