[package]
name = "statics"
version = "0.1.0"
authors = ["karasev.alexey@gmail.com"]

[lib]
name = "statics_lib"
path = "src/lib.rs"

[dependencies]
base64 = "0.9.0"
chrono = "0.4.0"
config = { version = "0.9", default-features = false, features = ["toml"] }
env_logger = "0.5"
failure = "0.1.1"
futures = "0.1.19"
futures-cpupool = "0.1.7"
futures-timer = "*"
hyper = "0.11.9"
hyper-tls="0.1.2"
image = { version = "0.18.0", default-features = false, features = ["jpeg", "png_codec"] }
jsonwebtoken = "4.0.0"
log = "0.4"
maplit = "*"
mime = "0.3.5"
multipart = { version = "0.14.2", default-features = false, features = ["server"] }
rand = "0.4.2"
rusoto_core = "0.32.0"
rusoto_s3 = "0.32.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stq_http = { path = "vendor/libstqbackend/http" }
stq_logging = { path = "vendor/libstqbackend/logging" }
stq_router = { path = "vendor/libstqbackend/router" }
tokio-core = "0.1"
sentry = "0.12"

[dev-dependencies]
hyper-tls = "0.1.3"
multipart = { version = "0.14.2", default-features = false, features = ["client", "hyper"] }
serde_json = "1.0"
